staticfiles/css/style.css
* {
    font-family: 'Roboto', sans-serif;
  }


body {
    background-color: #e8eae7;
}

.brand {
    font-size: 5vw;
    color: #ed3f23;
    text-shadow: 2px 2px 4px #726868;
    font-family: "Major Mono Display", monospace;
    font-style: normal;
}

.main-bg {
    background-color: #e8eae7;
}

.hero-container {
    position: relative;
    text-align: center;
}

.hero {
    width: 100%;
    height: auto;
    display: block;
}

.hero-text {
    position: absolute;
    color: #ed3f23;
    padding: 5%;
    text-align: left;
    top: 10%;
    text-shadow: 2px 2px 4px #393535;
}

.footer {
    background-color: #ed3f23;
}

.wht-text {
    color: #e8eae7;
}

.card {
    border: none;
    background-color: transparent;
}

.card-img-top {
    height: 40vw;
    object-fit: cover;
}

.masthead {
    margin-top: 10px;
    position: relative;
    height: 70vh;
    overflow: hidden;
}

.masthead-image img{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    object-fit: cover;
}

.masthead-text {
    position: absolute;
    z-index: 200;
    color: #e8eae7;
}

.recipepost-link {
    text-decoration: none;
    color: #5C636B;
}

.recipepost-link:hover
 {
    color: #ed3f23;
}

.recipepost-title {
    margin-top: 20%;
    font-size: 8vw!important;
    font-weight: 700;
    position: absolute;
    text-shadow: 2px 2px 4px #393535;
}

.update_button_recipe {
    margin-right: 20px;
}

.avg_rating {
    top: 5%;
    left: 60%;
    font-size: 3vw;
    text-shadow: 2px 2px 4px #393535;
}

.recipepost-excerpt {
    font-size: 2rem;
    font-weight: 200;
    font-style: italic;
}

.pagination li {
    margin: 0 5px;
}

.pagination .page-link {
    border: 1px solid;
    border-radius: 5px;
    color: #5C636B;
}

.btn {
    box-shadow: 2px 2px 4px #393535;
}

/* Add recipe and update recipe page */
.recipform_container {
    background-color: #e8eae7;
    padding-top: 5%;
}

/* Comments not yet approved from admin */
.faded {
    color: rgb(172, 175, 175);
}

/*Social media icons*/
.fab {
    border-right: none !important;
    }

    .fab::after {
    display: none !important;
    }


@media only screen and (max-width: 768px) {
    .card-img-top {
        height: 70vw;
    }
}

@media only screen and (max-width: 600px) {
    .footer .d-flex {
        flex-direction: column !important;
        align-items: center !important;
        text-align: center !important;
        justify-content: center !important;
    }
    .footer .follow-us {
        margin-top: 1rem !important;
    }
}

